# name-sorter

./: .gitignore  Main.hs  Makefile  NameSorter.cs  README.md  UnitTests.cs  name-sorter.cabal  unsorted-names-list.txt
