name:               name-sorter
license:            BSD3
version:            0.8
build-type:         Simple
cabal-version:      >= 1.20

executable name-sorter
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:        -O2 -Wall -threaded -fno-warn-tabs -fno-warn-missing-signatures
  build-depends:      base,
                      sort
